Closed Bug 1693300 Opened 3 years ago Closed 3 years ago

tb bustage after bug 1692391: /builds/worker/checkouts/gecko/comm/mailnews/addrbook/src/nsAbOSXCard.mm:174:3: error: use of undeclared identifier 'NS_OBJC_BEGIN_TRY_ABORT_BLOCK_NSRESULT'

Categories

(Thunderbird :: Upstream Synchronization, defect, P5)

Tracking

(thunderbird_esr78 unaffected, thunderbird86 unaffected)

RESOLVED FIXED
87 Branch
Tracking Status
thunderbird_esr78 --- unaffected
thunderbird86 --- unaffected

People

(Reporter: intermittent-bug-filer, Assigned: mkmelin)

Details

(Whiteboard: [build bustage])

Summary: Intermittent /builds/worker/checkouts/gecko/comm/mailnews/addrbook/src/nsAbOSXCard.mm:174:3: error: use of undeclared identifier 'NS_OBJC_BEGIN_TRY_ABORT_BLOCK_NSRESULT' → tb bustage after bug 1692391: /builds/worker/checkouts/gecko/comm/mailnews/addrbook/src/nsAbOSXCard.mm:174:3: error: use of undeclared identifier 'NS_OBJC_BEGIN_TRY_ABORT_BLOCK_NSRESULT'

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/6831f44b3da7
Replace the NS_OBJC_BEGIN/END_TRY_ABORT_BLOCK_NSRESULT macros with the functionally identical NS_OBJC_BEGIN/END_TRY_BLOCK_RETURN(NS_ERROR_FAILURE). rs=bustage-fix
https://hg.mozilla.org/comm-central/rev/b4b9e78f0b77
Rename NS_OBJC_BEGIN/END_TRY_ABORT_BLOCK macros, replacing ABORT with IGNORE. These macros just log the exception and move on, without aborting. rs=bustage-fix

Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Assignee: nobody → mkmelin+mozilla
Target Milestone: --- → 87 Branch
Whiteboard: [build bustage]
You need to log in before you can comment on or make changes to this bug.