mailnews/addrbook/src/nsAbOSXCard.mm
@@ -171,7 +171,7 @@ NS_IMETHODIMP nsAbOSXCard::SetUID(const nsACString& aUID) {
 }
 
 nsresult nsAbOSXCard::Update(bool aNotify) {
-  NS_OBJC_BEGIN_TRY_ABORT_BLOCK_NSRESULT;
+  NS_OBJC_BEGIN_TRY_BLOCK_RETURN;
 
   ABAddressBook* addressBook = [ABAddressBook sharedAddressBook];
 
@@ -349,5 +349,5 @@ nsresult nsAbOSXCard::Update(bool aNotify) {
 
   return NS_OK;
 
-  NS_OBJC_END_TRY_ABORT_BLOCK_NSRESULT;
+  NS_OBJC_END_TRY_BLOCK_RETURN(NS_ERROR_FAILURE);
 }
